--- a/src/css/ProductDetail.css
+++ b/src/css/ProductDetail.css
@@ -303,6 +303,10 @@
   border: 1px solid #f4a5a5;
 }
 
+.nutricion-sticker-container {
+  margin-top: 30px; 
+}
+
 @keyframes fadeInOut {
   0% { opacity: 0; transform: translateY(-5px); }
   10% { opacity: 1; transform: translateY(0); }
